第四次优化
